syntax = "proto3";

package app.account.api.v1;

import "google/api/annotations.proto";

option go_package = "yaosiqi525/cloud-platform/app/account/api/v1;v1";
option java_multiple_files = true;
option java_package = "app.account.api.v1";

service Account {
	rpc CreateAccount (CreateAccountRequest) returns (CommonReply) {
    option (google.api.http) = {
        // 定义一个 GET 接口，并且把 name 映射到 HelloRequest
        post: "/account/v1/create",
        body: "*",
    };
  };
	rpc UpdateAccount (UpdateAccountRequest) returns (UpdateAccountReply);
	rpc DeleteAccount (DeleteAccountRequest) returns (DeleteAccountReply);
	rpc GetAccount (GetAccountRequest) returns (GetAccountReply);
	rpc ListAccount (ListAccountRequest) returns (ListAccountReply);
}

message AccountInfo {
  string account = 1;
  string pwd = 2;
  string name = 3;
}

message OperatorInfo {
  double operatorId = 1;
}

message CreateAccountRequest {
  AccountInfo accountInfo = 1;
  OperatorInfo operator = 2;

}
message CommonReply {
  int32 code = 1;
  string msg = 2;
}

message UpdateAccountRequest {}
message UpdateAccountReply {}

message DeleteAccountRequest {}
message DeleteAccountReply {}

message GetAccountRequest {}
message GetAccountReply {}

message ListAccountRequest {}
message ListAccountReply {}